--- a/config/rbac/service_account.yaml
+++ b/config/rbac/service_account.yaml
@@ -152,3 +152,53 @@ subjects:
 - kind: ServiceAccount
   name: redis
   namespace: openstack
+---
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  name: dnsmasq
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: Role
+metadata:
+  name: dnsmasq-role
+  namespace: openstack
+rules:
+- apiGroups:
+  - security.openshift.io
+  resourceNames:
+  - anyuid
+  resources:
+  - securitycontextconstraints
+  verbs:
+  - use
+- apiGroups:
+  - ""
+  resources:
+  - pods
+  verbs:
+  - create
+  - get
+  - list
+  - patch
+  - post
+  - update
+  - watch
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: RoleBinding
+metadata:
+  name: dnsmasq-rolebinding
+roleRef:
+  apiGroup: rbac.authorization.k8s.io
+  kind: Role
+  name: dnsmasq-role
+subjects:
+  # Applying the role to the SA (with prefix) to be able
+  # to run the operator locally
+- kind: ServiceAccount
+  name: infra-operator-dnsmasq
+  namespace: openstack
+- kind: ServiceAccount
+  name: dnsmasq
+  namespace: openstack
