--- a/config/manifests/bases/infra-operator.clusterserviceversion.yaml
+++ b/config/manifests/bases/infra-operator.clusterserviceversion.yaml
@@ -10,6 +10,11 @@ spec:
   apiservicedefinitions: {}
   customresourcedefinitions:
     owned:
+    - description: DNSMasq is the Schema for the dnsmasqs API
+      displayName: DNSMasq
+      kind: DNSMasq
+      name: dnsmasqs.network.openstack.org
+      version: v1beta1
     - description: Memcached is the Schema for the memcacheds API
       displayName: Memcached
       kind: Memcached
