--- a/config/samples/kustomization.yaml
+++ b/config/samples/kustomization.yaml
@@ -4,4 +4,5 @@ resources:
 - client_v1beta1_openstackclient.yaml
 - memcached_v1beta1_memcached.yaml
 - redis_v1beta1_redis.yaml
+- network_v1beta1_dnsmasq.yaml
 #+kubebuilder:scaffold:manifestskustomizesamples
