--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -7,6 +7,7 @@ resources:
 - bases/memcached.openstack.org_memcacheds.yaml
 - bases/redis.openstack.org_redises.yaml
 - bases/network.openstack.org_dnsmasqs.yaml
+- bases/network.openstack.org_dnsdata.yaml
 #+kubebuilder:scaffold:crdkustomizeresource
 
 patchesStrategicMerge:
@@ -16,6 +17,8 @@ patchesStrategicMerge:
 #- patches/webhook_in_openstackclients.yaml
 #- patches/webhook_in_memcacheds.yaml
 #- patches/webhook_in_redises.yaml
+#- patches/webhook_in_dnsmasqs.yaml
+#- patches/webhook_in_dnsdata.yaml
 #+kubebuilder:scaffold:crdkustomizewebhookpatch
 
 # [CERTMANAGER] To enable cert-manager, uncomment all the sections with [CERTMANAGER] prefix.
@@ -24,6 +27,8 @@ patchesStrategicMerge:
 #- patches/cainjection_in_openstackclients.yaml
 #- patches/cainjection_in_memcacheds.yaml
 #- patches/cainjection_in_redises.yaml
+#- patches/cainjection_in_dnsmasqs.yaml
+#- patches/cainjection_in_dnsdata.yaml
 #+kubebuilder:scaffold:crdkustomizecainjectionpatch
 
 # the following config is for teaching kustomize how to do kustomization for CRDs.
