--- a/config/rbac/service_account.yaml
+++ b/config/rbac/service_account.yaml
@@ -168,6 +168,7 @@ rules:
   - security.openshift.io
   resourceNames:
   - anyuid
+  - privileged
   resources:
   - securitycontextconstraints
   verbs:
