[DNS] Add DNSMasq and DNSData CRD to manage DNS entries for edpm nodes
* DNSMasq CRD allows creating a dnsmasq DNS serverinstance and expose
the service via ExternalEndpoints and metallb to the edpm nodes on
isolated networks.

Using the DNSMasqOptions the instance can be customized from the default
config started.

Hosts information is being added via configmaps which have a label with
{dnsmasqhosts: dnsdata (can be customized via DNSDataLabelSelectorValue)}
set.

* DNSData CRD allows to register hosts to be resolved in the dnsmasq
instance. The CRD creates the required configmap with the label as
described above.

* Additionally there is a service_controller.go with no CRD. It watches
for LoadBalancer services in the same namespace of a DNSMasq instance and
creates a DNSData CR to registers service endpoints which have an annotation
set with {"dnsmasq.network.openstack.org/hostname": <hostname>}.

Depends-On: https://github.com/openstack-k8s-operators/lib-common/pull/241
Depends-On: https://github.com/openstack-k8s-operators/lib-common/pull/258
Jira: OSP-23053

--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -42,6 +42,20 @@ rules:
 - apiGroups:
   - apps
   resources:
+  - deployments/finalizers
+  verbs:
+  - update
+- apiGroups:
+  - apps
+  resources:
+  - deployments/status
+  verbs:
+  - get
+  - patch
+  - update
+- apiGroups:
+  - apps
+  resources:
   - statefulsets
   verbs:
   - create
@@ -82,8 +96,12 @@ rules:
   resources:
   - configmaps
   verbs:
+  - create
+  - delete
   - get
   - list
+  - patch
+  - update
   - watch
 - apiGroups:
   - ""
@@ -146,6 +164,96 @@ rules:
   - memcached.openstack.org
   resources:
   - memcacheds/status
+  verbs:
+  - get
+  - patch
+  - update
+- apiGroups:
+  - network.openstack.org
+  resources:
+  - dnsdata
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
+  - network.openstack.org
+  resources:
+  - dnsdata/finalizers
+  verbs:
+  - update
+- apiGroups:
+  - network.openstack.org
+  resources:
+  - dnsdata/status
+  verbs:
+  - get
+  - patch
+  - update
+- apiGroups:
+  - network.openstack.org
+  resources:
+  - dnsdatas
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
+  - network.openstack.org
+  resources:
+  - dnsmasqs
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
+  - network.openstack.org
+  resources:
+  - dnsmasqs/finalizers
+  verbs:
+  - update
+- apiGroups:
+  - network.openstack.org
+  resources:
+  - dnsmasqs/status
+  verbs:
+  - get
+  - patch
+  - update
+- apiGroups:
+  - network.openstack.org
+  resources:
+  - services
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
+  - network.openstack.org
+  resources:
+  - services/finalizers
+  verbs:
+  - update
+- apiGroups:
+  - network.openstack.org
+  resources:
+  - services/status
   verbs:
   - get
   - patch
