--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -8,6 +8,7 @@ resources:
 - bases/redis.openstack.org_redises.yaml
 - bases/network.openstack.org_dnsmasqs.yaml
 - bases/network.openstack.org_dnsdata.yaml
+- bases/network.openstack.org_netconfigs.yaml
 #+kubebuilder:scaffold:crdkustomizeresource
 
 patchesStrategicMerge:
@@ -19,6 +20,7 @@ patchesStrategicMerge:
 #- patches/webhook_in_redises.yaml
 #- patches/webhook_in_dnsmasqs.yaml
 #- patches/webhook_in_dnsdata.yaml
+#- patches/webhook_in_netconfigs.yaml
 #+kubebuilder:scaffold:crdkustomizewebhookpatch
 
 # [CERTMANAGER] To enable cert-manager, uncomment all the sections with [CERTMANAGER] prefix.
@@ -29,6 +31,7 @@ patchesStrategicMerge:
 #- patches/cainjection_in_redises.yaml
 #- patches/cainjection_in_dnsmasqs.yaml
 #- patches/cainjection_in_dnsdata.yaml
+#- patches/cainjection_in_netconfigs.yaml
 #+kubebuilder:scaffold:crdkustomizecainjectionpatch
 
 # the following config is for teaching kustomize how to do kustomization for CRDs.
