--- a/config/samples/kustomization.yaml
+++ b/config/samples/kustomization.yaml
@@ -6,4 +6,5 @@ resources:
 - redis_v1beta1_redis.yaml
 - network_v1beta1_dnsmasq.yaml
 - network_v1beta1_dnsdata.yaml
+- network_v1beta1_netconfig.yaml
 #+kubebuilder:scaffold:manifestskustomizesamples
