[IPAM] Reservation CRD

--- a/config/webhook/manifests.yaml
+++ b/config/webhook/manifests.yaml
@@ -91,6 +91,26 @@ webhooks:
     service:
       name: webhook-service
       namespace: system
+      path: /mutate-network-openstack-org-v1beta1-reservation
+  failurePolicy: Fail
+  name: mreservation.kb.io
+  rules:
+  - apiGroups:
+    - network.openstack.org
+    apiVersions:
+    - v1beta1
+    operations:
+    - CREATE
+    - UPDATE
+    resources:
+    - reservations
+  sideEffects: None
+- admissionReviewVersions:
+  - v1
+  clientConfig:
+    service:
+      name: webhook-service
+      namespace: system
       path: /mutate-redis-openstack-org-v1beta1-redis
   failurePolicy: Fail
   name: mredis.kb.io
@@ -191,6 +211,26 @@ webhooks:
     - UPDATE
     resources:
     - netconfigs
+  sideEffects: None
+- admissionReviewVersions:
+  - v1
+  clientConfig:
+    service:
+      name: webhook-service
+      namespace: system
+      path: /validate-network-openstack-org-v1beta1-reservation
+  failurePolicy: Fail
+  name: vreservation.kb.io
+  rules:
+  - apiGroups:
+    - network.openstack.org
+    apiVersions:
+    - v1beta1
+    operations:
+    - CREATE
+    - UPDATE
+    resources:
+    - reservations
   sideEffects: None
 - admissionReviewVersions:
   - v1
