--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -21,6 +21,7 @@ patchesStrategicMerge:
 #- patches/webhook_in_dnsmasqs.yaml
 #- patches/webhook_in_dnsdata.yaml
 #- patches/webhook_in_netconfigs.yaml
+#- patches/webhook_in_reservations.yaml
 #+kubebuilder:scaffold:crdkustomizewebhookpatch
 
 # [CERTMANAGER] To enable cert-manager, uncomment all the sections with [CERTMANAGER] prefix.
@@ -32,6 +33,7 @@ patchesStrategicMerge:
 #- patches/cainjection_in_dnsmasqs.yaml
 #- patches/cainjection_in_dnsdata.yaml
 #- patches/cainjection_in_netconfigs.yaml
+#- patches/cainjection_in_reservations.yaml
 #+kubebuilder:scaffold:crdkustomizecainjectionpatch
 
 # the following config is for teaching kustomize how to do kustomization for CRDs.
