--- a/apis/bases/network.openstack.org_reservations.yaml
+++ b/apis/bases/network.openstack.org_reservations.yaml
@@ -25,7 +25,7 @@ spec:
       name: Message
       type: string
     - description: Reservation
-      jsonPath: .status.reservations
+      jsonPath: .spec.reservation
       name: Reservation
       type: string
     name: v1beta1
@@ -90,7 +90,7 @@ spec:
                     type: string
                 type: object
                 x-kubernetes-map-type: atomic
-              reservations:
+              reservation:
                 additionalProperties:
                   description: IPAddress -
                   properties:
@@ -110,12 +110,12 @@ spec:
                   - network
                   - subnet
                   type: object
-                description: Reservations, map (index network name) with reservation
+                description: Reservation, map (index network name) with reservation
                 type: object
             required:
             - hostname
             - ipSetRef
-            - reservations
+            - reservation
             type: object
           status:
             description: ReservationStatus defines the observed state of Reservation
