--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -9,6 +9,8 @@ resources:
 - bases/network.openstack.org_dnsmasqs.yaml
 - bases/network.openstack.org_dnsdata.yaml
 - bases/network.openstack.org_netconfigs.yaml
+- bases/network.openstack.org_ipsets.yaml
+- bases/network.openstack.org_reservations.yaml
 #+kubebuilder:scaffold:crdkustomizeresource
 
 patchesStrategicMerge:
@@ -22,6 +24,7 @@ patchesStrategicMerge:
 #- patches/webhook_in_dnsdata.yaml
 #- patches/webhook_in_netconfigs.yaml
 #- patches/webhook_in_reservations.yaml
+#- patches/webhook_in_ipsets.yaml
 #+kubebuilder:scaffold:crdkustomizewebhookpatch
 
 # [CERTMANAGER] To enable cert-manager, uncomment all the sections with [CERTMANAGER] prefix.
@@ -34,6 +37,7 @@ patchesStrategicMerge:
 #- patches/cainjection_in_dnsdata.yaml
 #- patches/cainjection_in_netconfigs.yaml
 #- patches/cainjection_in_reservations.yaml
+#- patches/cainjection_in_ipsets.yaml
 #+kubebuilder:scaffold:crdkustomizecainjectionpatch
 
 # the following config is for teaching kustomize how to do kustomization for CRDs.
