--- a/config/samples/kustomization.yaml
+++ b/config/samples/kustomization.yaml
@@ -7,4 +7,5 @@ resources:
 - network_v1beta1_dnsmasq.yaml
 - network_v1beta1_dnsdata.yaml
 - network_v1beta1_netconfig.yaml
+- network_v1beta1_ipset.yaml
 #+kubebuilder:scaffold:manifestskustomizesamples
